--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jacob Tan</title>
     <link rel="stylesheet" href="styles.css" />
-    <script
-      src="https://kit.fontawesome.com/c8e4d183c2.js"
-      crossorigin="anonymous"
-    ></script>
   </head>
   <body>
     <section id="about-me">
@@ -18,22 +14,22 @@
         <ul class="nav__link--list">
           <li>
             <a
-              href=""
+              href="#languages"
               class="
                 nav__link--anchor
-                link__hover-effect link__hover-effect--black
+                link__hover-efect link__hover-efect link__hover-effect--black
               "
               >Languages</a
             >
           </li>
           <li>
             <a
-              href=""
+              href="#projects"
               class="
                 nav__link--anchor
-                link__hover-effect link__hover-effect--black
+                link__hover-efect link__hover-efect link__hover-effect--black
               "
-              >Project</a
+              >Projects</a
             >
           </li>
           <li>
@@ -43,42 +39,20 @@
           </li>
         </ul>
       </nav>
-      <div class="flex flex-1">
+      <div>
         <div class="about-me__info row">
           <div class="about-me__info--container">
             <figure class="about-me__picture--mask">
-              <img src="./assets/hammer-time.gif"
-              class-"about-me__picture"alt="Picture of hammer" />
+              <img src="./assets/jat.png" alt="pic of me :D" />
             </figure>
             <h1 class="about-me__info--title">
-              Hey! I'm <span class="text--purple">Jacob Tan 👋</span>
+              Hey! I'm <span class="text--purple"> Jacob Tan </span> 👋
             </h1>
             <p class="about-me__info--para">
-              <strong class="text--purple"> i havent gotten around </strong> to
-              writing anything here. enjoy this meaningless summary for now.
+              I <strong class="text--purple">haven't</strong> gotten around to
+              writing anything here, enjoy this barren summary...
             </p>
-            <div class="about-me__links">
-              <a href="" class="about-me__link"
-                ><i class="fab fa-linkedin-in"></i
-              ></a>
-              <a href="" class="about-me__link"
-                ><i class="fab fa-github"></i
-              ></a>
-              <a href="" class="about-me__link"
-                ><i class="far fa-envelope"></i
-              ></a>
-              <a href="" class="about-me__link"
-                ><i class="fas fa-file-pdf"></i
-              ></a>
-            </div>
           </div>
-          <figure class="about-me__img--container">
-            <img
-              src="./assets/undraw_electric_car_b7hl.svg"
-              class="about-me__img"
-              alt=""
-            />
-          </figure>
         </div>
       </div>
     </section>
