--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
       <nav>
         <div class="personal__logo">Jacob Tan</div>
         <ul class="nav__link--list">
-          <li>
+          <li class="nav__link">
             <a
               href="#languages"
               class="
                 nav__link--anchor
-                link__hover-efect link__hover-efect link__hover-effect--black
+                link__hover-effect link__hover-effect--black
               "
               >Languages</a
             >
           </li>
-          <li>
+          <li class="nav__link">
             <a
               href="#projects"
               class="
                 nav__link--anchor
-                link__hover-efect link__hover-efect link__hover-effect--black
+                link__hover-effect link__hover-effect--black
               "
               >Projects</a
             >
           </li>
-          <li>
+          <li class="nav__link">
             <a href="" class="nav__link--anchor nav__link--anchor-primary"
               >Contact</a
             >
@@ -89,5 +89,264 @@
         </div>
       </div>
     </section>
+    <section id="languages">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            This is my <span class="text--purple">technology stack</span>
+          </h1>
+          <div class="language__list">
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">HTML</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/6/62/CSS3_logo.svg"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">CSS</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">JavaScript</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/1/18/C_Programming_Language.svg"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">C</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/9/92/LaTeX_logo.svg"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">LaTeX</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/2/21/Matlab_Logo.png"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">MATLAB</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">Python</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://lh3.googleusercontent.com/proxy/qpYZejyQHP_wmyZCZEywnOqqLdT6mSDVgccaSs04GcG0U6NFgDSFCcjd03YcNMJiBWqPxHMYgwnJllGWIQyN7la80UHYWWLywo8FgA-XTfbF6vebxz1l5CCAlL_mV1iH"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">Autodesk Inventor</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="projects">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__tile">
+            Here are some of my <span class="text--purple">projects</span>
+          </h1>
+          <ul class="project__list">
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/f12022.jpg"
+                  class="project__img"
+                  alt="F1 Car"
+                />
+                <div class="project__description">
+                  <h3 class="project__description--title">Lorem ipsum</h3>
+                  <h4 class="project__description--sub-title">HTML, CSS</h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quae labore quam reiciendis, dolorem accusantium repellat
+                    fugit ratione nemo nihil quod aperiam voluptatibus quos
+                    tenetur dolorum rem accusamus deleniti necessitatibus
+                    dignissimos?
+                  </p>
+                  <div class="project__description--links">
+                    <a
+                      href="https://github.com/fragilejate"
+                      target="_blank"
+                      class="project__description--link"
+                    >
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="#" class="project__description--link">
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/f12022.jpg"
+                  class="project__img"
+                  alt="F1 Car"
+                />
+                <div class="project__description">
+                  <h3 class="project__description--title">Lorem ipsum</h3>
+                  <h4 class="project__description--sub-title">HTML, CSS</h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quae labore quam reiciendis, dolorem accusantium repellat
+                    fugit ratione nemo nihil quod aperiam voluptatibus quos
+                    tenetur dolorum rem accusamus deleniti necessitatibus
+                    dignissimos?
+                  </p>
+                  <div class="project__description--links">
+                    <a
+                      href="https://github.com/fragilejate"
+                      target="_blank"
+                      class="project__description--link"
+                    >
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="#" class="project__description--link">
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/f12022.jpg"
+                  class="project__img"
+                  alt="F1 Car"
+                />
+                <div class="project__description">
+                  <h3 class="project__description--title">Lorem ipsum</h3>
+                  <h4 class="project__description--sub-title">HTML, CSS</h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quae labore quam reiciendis, dolorem accusantium repellat
+                    fugit ratione nemo nihil quod aperiam voluptatibus quos
+                    tenetur dolorum rem accusamus deleniti necessitatibus
+                    dignissimos?
+                  </p>
+                  <div class="project__description--links">
+                    <a
+                      href="https://github.com/fragilejate"
+                      target="_blank"
+                      class="project__description--link"
+                    >
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="#" class="project__description--link">
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="row footer__row">
+        <a href="#" class="footer__anchor">
+          <figure class="footer__logo">
+            <img
+              src="./assets/logo_transparent.png"
+              class="footer__logo--img"
+              alt=""
+            />
+          </figure>
+          <span class="footer__logo--popper"
+            >Top
+            <i class="fas fa-arrow-up"></i>
+          </span>
+          <a href="">
+            <div class="footer__social--list">
+              <a
+                href="#"
+                class="
+                  footer__social--link
+                  link__hover-effect link__hover-effect--white
+                "
+                target="_blank"
+                >GitHub
+              </a>
+              <a
+                href="#"
+                class="
+                  footer__social--link
+                  link__hover-effect link__hover-effect--white
+                "
+                target="_blank"
+                >LinkedIn
+              </a>
+              <a
+                href="mailto:jacob.tan229@gmail.com"
+                class="
+                  footer__social--link
+                  link__hover-effect link__hover-effect--white
+                "
+                target="_blank"
+                >Email
+              </a>
+              <a
+                href="mailto:jacob.tan229@gmail.com"
+                class="
+                  footer__social--link
+                  link__hover-effect link__hover-effect--white
+                "
+                target="_blank"
+                >Resume
+              </a>
+            </div>
+          </a>
+        </a>
+
+        <div class="footer__copyright">
+          Copyright Ⓒ 2021 Jacob Alexander Tan
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
