--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               href="#languages"
               class="
                 nav__link--anchor
-                link__hover-effect link__hover-effect--black
+                link__hover-effect link__hover-effect--colour-change
               "
               >Languages</a
             >
@@ -31,7 +31,7 @@
               href="#projects"
               class="
                 nav__link--anchor
-                link__hover-effect link__hover-effect--black
+                link__hover-effect link__hover-effect--colour-change
               "
               >Projects</a
             >
@@ -54,11 +54,13 @@
               />
             </figure>
             <h1 class="about-me__info--title">
-              Hey! I'm <span class="text--purple"> Jacob Tan </span> 👋
+              Hey! I'm <span class="text--colour-change"> Jacob Tan </span>
+              <span class="wave">👋</span>
             </h1>
             <p class="about-me__info--para">
-              I <strong class="text--purple">haven't</strong> gotten around to
-              writing anything here, enjoy this barren summary...
+              Everthing on this page is written in
+              <strong class="text--colour-change">HTML/CSS</strong>, including
+              this page.
             </p>
             <div class="about-me__links">
               <a
@@ -68,10 +70,18 @@
               >
                 <i class="fab fa-linkedin-in"></i>
               </a>
-              <a href="#" class="about-me__link" target="_blank">
+              <a
+                href="https://github.com/fragilejate"
+                class="about-me__link"
+                target="_blank"
+              >
                 <i class="fab fa-github"></i>
               </a>
-              <a href="#" class="about-me__link" target="_blank">
+              <a
+                href="mailto:jacob.tan229@gmail.com"
+                class="about-me__link"
+                target="_blank"
+              >
                 <i class="far fa-envelope"></i>
               </a>
               <a href="#" class="about-me__link" target="_blank">
@@ -82,7 +92,7 @@
           <figure class="about-me__img--container">
             <img
               class="about-me__img"
-              src="./assets/undraw_Developer_activity.svg"
+              src="./assets/undraw_Before_dawn_re_hp4m.svg"
               alt=""
             />
           </figure>
@@ -93,7 +103,7 @@
       <div class="container">
         <div class="row">
           <h1 class="section__title">
-            This is my <span class="text--purple">technology stack</span>
+            This is my <span class="text--colour-change">technology stack</span>
           </h1>
           <div class="language__list">
             <div class="language">
@@ -141,7 +151,7 @@
                 <img
                   src="https://upload.wikimedia.org/wikipedia/commons/9/92/LaTeX_logo.svg"
                   alt=""
-                  class="language__img"
+                  class="language__img language__img--latex"
                 />
               </figure>
               <span class="language__name">LaTeX</span>
@@ -169,12 +179,12 @@
             <div class="language">
               <figure class="language__img--wrapper">
                 <img
-                  src="https://lh3.googleusercontent.com/proxy/qpYZejyQHP_wmyZCZEywnOqqLdT6mSDVgccaSs04GcG0U6NFgDSFCcjd03YcNMJiBWqPxHMYgwnJllGWIQyN7la80UHYWWLywo8FgA-XTfbF6vebxz1l5CCAlL_mV1iH"
+                  src="https://avatars.githubusercontent.com/u/18133?s=200&v=4"
                   alt=""
                   class="language__img"
                 />
               </figure>
-              <span class="language__name">Autodesk Inventor</span>
+              <span class="language__name">GIT</span>
             </div>
           </div>
         </div>
@@ -184,7 +194,8 @@
       <div class="container">
         <div class="row">
           <h1 class="section__tile">
-            Here are some of my <span class="text--purple">projects</span>
+            Here are some of my
+            <span class="text--colour-change">projects</span>
           </h1>
           <ul class="project__list">
             <li class="project">
@@ -219,66 +230,7 @@
                 </div>
               </div>
             </li>
-            <li class="project">
-              <div class="project__wrapper">
-                <img
-                  src="./assets/f12022.jpg"
-                  class="project__img"
-                  alt="F1 Car"
-                />
-                <div class="project__description">
-                  <h3 class="project__description--title">Lorem ipsum</h3>
-                  <h4 class="project__description--sub-title">HTML, CSS</h4>
-                  <p class="project__description--para">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Quae labore quam reiciendis, dolorem accusantium repellat
-                    fugit ratione nemo nihil quod aperiam voluptatibus quos
-                    tenetur dolorum rem accusamus deleniti necessitatibus
-                    dignissimos?
-                  </p>
-                  <div class="project__description--links">
-                    <a
-                      href="https://github.com/fragilejate"
-                      target="_blank"
-                      class="project__description--link"
-                    >
-                      <i class="fab fa-github"></i>
-                    </a>
-                    <a href="#" class="project__description--link">
-                      <i class="fas fa-link"></i>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li class="project">
-              <div class="project__wrapper">
-                <img
-                  src="./assets/f12022.jpg"
-                  class="project__img"
-                  alt="F1 Car"
-                />
-                <div class="project__description">
-                  <h3 class="project__description--title">Lorem ipsum</h3>
-                  <h4 class="project__description--sub-title">HTML, CSS</h4>
-                  <p class="project__description--para">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Quae labore quam reiciendis, dolorem accusantium repellat
-                    fugit ratione nemo nihil quod aperiam voluptatibus quos
-                    tenetur dolorum rem accusamus deleniti necessitatibus
-                    dignissimos?
-                  </p>
-                  <div class="project__description--links">
-                    <a
-                      href="https://github.com/fragilejate"
-                      target="_blank"
-                      class="project__description--link"
-                    >
-                      <i class="fab fa-github"></i>
-                    </a>
-                    <a href="#" class="project__description--link">
-                      <i class="fas fa-link"></i>
-                    </a>
+            
                   </div>
                 </div>
               </div>
@@ -304,7 +256,7 @@
           <a href="">
             <div class="footer__social--list">
               <a
-                href="#"
+                href="https://github.com/fragilejate"
                 class="
                   footer__social--link
                   link__hover-effect link__hover-effect--white
@@ -313,7 +265,7 @@
                 >GitHub
               </a>
               <a
-                href="#"
+                href="https://www.linkedin.com/in/jacob-tan-4aa914206/"
                 class="
                   footer__social--link
                   link__hover-effect link__hover-effect--white
